# FortiDynaSync

./: .gitmodules  .mise.toml  README.md  fortidynasync.py  pyproject.toml
.github/: CODEOWNERS
